@@ -5,4 +5,11 @@
 	<string id="30002">Byl překročen limit volných slotů na stahování[CR]zkuste to později nebo použijte placený účet</string>
 	<string id="30003">Vyhledat</string>
 	<string id="30004">[B]Nové hledání[/B]</string>
+	<string id="30030">Složka pro stahování</string>
+	<string id="30031">Nastavte prosím složku pro stahování</string>
+	<string id="30032">Zobrazovat stav stahování</string>
+	<string id="30033"> - zobrazit stav každých</string>
+	<string id="30034">10%</string>
+	<string id="30035">5%</string>
+	<string id="30036">1%</string>
 </strings>
