@@ -5,4 +5,11 @@
 	<string id="30002">Limit of free download slots was reachet[CR]try again later or use premium account</string>
 	<string id="30003">Search</string>
 	<string id="30004">[B]New search[/B]</string>
+	<string id="30030">Downloads</string>
+	<string id="30031">Please setup downloads folder</string>
+	<string id="30032">Notify when downloading</string>
+	<string id="30033"> - display notification every</string>
+	<string id="30034">10%</string>
+	<string id="30035">5%</string>
+	<string id="30036">1%</string>
 </strings>
