@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <settings>
 	<setting label="30000" type="text" id="keep-searches" default="20" />
+	<setting label="30030" id="downloads" type="folder" default="" />
+	<setting label="30032" id="download-notify" type="bool" default="true" />
+	<setting label="30033" id="download-notify-every" type="enum" lvalues="30034|30035|30036" default="0" visible="eq(-1,true)" />
 </settings>
